fixed scrollbar dragging - fixes #6359

--- a/tabby-terminal/src/frontends/xterm.css
+++ b/tabby-terminal/src/frontends/xterm.css
@@ -15,6 +15,7 @@
 
 .xterm-decoration-overview-ruler {
     right: 6px;
+    pointer-events: none;
 }
 
 .xterm-find-result-decoration {
